ICU-23321 Volatile double-checked locking for one-time init (7 files)
Replace synchronized methods that guard one-time lazy initialization
with volatile boolean + double-checked locking. After first init,
the fast path is a single volatile read:

- ZoneMeta: volatile DCL for zoneIDs, CANONICAL_ID_CACHE, and other
  SoftReference-wrapped caches

- Region: volatile DCL for loadRegionData()

- SimpleDateFormat: replace two separate volatile fields (locale,
  pattern) with an immutable snapshot object published via a single
  volatile write. This eliminates a TOCTOU race where the two fields
  could be read inconsistently by concurrent threads.

- CharsetProviderICU: volatile boolean guard for
  loadAvailableICUCharsets(). Replaces isEmpty() check which would
  fail when no charsets are available.

- UConverterAlias: volatile DCL for haveAliasData()

- TimeZoneFormat: volatile DCL for timezone name cache

- LocaleDisplayNamesImpl: volatile DCL for locale data cache

References:
- Effective Java, 3rd Edition, Item 83 "Use lazy initialization
  judiciously"
- Java Concurrency in Practice, Section 16.2.4 "Double-checked
  locking"